Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 
 # Two choices: local|production. Use local if you want to install Monica as a
 # development version. Use production otherwise.
-APP_ENV=local
+APP_ENV=production
 
 # true if you want to show debug information on errors. For production, put this
 # to false.
@@ -14,7 +14,7 @@ APP_DEBUG=false
 # this secure otherwise, everyone will be able to access your application.
 # Must be 32 characters long exactly.
 # Use `php artisan key:generate` to generate a random key.
-APP_KEY=ChangeMeBy32KeyLengthOrGenerated
+APP_KEY=ChangeMeToA32bitString
 
 # Prevent information leakage by referring to IDs with hashIds instead of
 # the actual IDs used in the database.
@@ -22,23 +22,23 @@ HASH_SALT=ChangeMeBy20+KeyLength
 HASH_LENGTH=18
 
 # The URL of your application.
-APP_URL=http://localhost
+APP_URL=http://monica.lab.powerninjas.net
 
 # Database information
 # To keep this information secure, we urge you to change the default password
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 # You can use mysql unix socket if available, it overrides DB_HOST and DB_PORT values.
 #DB_UNIX_SOCKET=/var/run/mysqld/mysqld.sock
 DB_DATABASE=monica
 DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_PASSWORD=ChangeMeToAStrongPassword
 DB_PREFIX=
-DB_TEST_HOST=127.0.0.1
+DB_TEST_HOST=mysql
 DB_TEST_DATABASE=monica_test
 DB_TEST_USERNAME=homestead
-DB_TEST_PASSWORD=secret
+DB_TEST_PASSWORD=ChangeMeToAStrongPassword
 
 # Use utf8mb4 database charset format to support emoji characters
 # ⚠ be sure your DBMS supports utf8mb4 format
@@ -46,13 +46,14 @@ DB_USE_UTF8MB4=true
 
 # Mail credentials used to send emails from the application.
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=maildev
+#Use djfarelly/maildev image from dockerhub
+MAIL_PORT=25
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=ValidEmailAddress
-MAIL_FROM_NAME="Some Name"
+MAIL_FROM_ADDRESS=me@me.me
+MAIL_FROM_NAME="Me"
 APP_EMAIL_NEW_USERS_NOTIFICATION=EmailThatWillSendNotificationsForNewUser
 
 # Default locale used in the application.
